package utils;

public class PrintScreen {

    public void printScreenPage() {}

}
